typeway/tests/compile_fail/path_empty_literal.stderr
error: path literal cannot be empty
 --> tests/compile_fail/path_empty_literal.rs:5:30
  |
5 | typeway_path!(type BadPath = "");
  |                              ^^
